@@ -266,8 +266,7 @@ class SvnRemoteAccess(ControlDir):
         """See ControlDir.needs_format_conversion()."""
         return not isinstance(self._format, format.__class__)
 
-    def import_branch(self, source, stop_revision=None, overwrite=False,
-            _push_merged=None):
+    def import_branch(self, source, stop_revision=None, overwrite=False):
         """Create a new branch in this repository, possibly
         with the specified history, optionally importing revisions.
 
@@ -294,7 +293,7 @@ class SvnRemoteAccess(ControlDir):
                 if type not in ('branch', 'tag') or ip != '':
                     raise errors.NotBranchError(target_branch_path)
                 inter.push_new_branch(layout, project, target_branch_path,
-                        stop_revision, push_merged=_push_merged, overwrite=overwrite)
+                        stop_revision, overwrite=overwrite)
                 return self.open_branch()
             finally:
                 repos.unlock()
